# CaRMS-demo

./: .gitignore  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE2_QUICKSTART.md  PROJECT_PLAN.md  QUICKSTART.md  README.md  main.py  pyproject.toml
data/: README.md
docker/: Dockerfile.api  Dockerfile.dagster  docker-compose.yml  init-db.sql
docs/: architecture.md
scripts/: __init__.py  init_db.py  setup.sh  verify.py
src/: __init__.py
src/api/: dependencies.py  main.py  schemas.py
src/api/routes/: __init__.py  analytics.py  programs.py
src/dagster_project/: __init__.py  jobs.py  schedules.py
src/dagster_project/assets/: __init__.py  analytics.py  data_quality.py  raw_data.py  serving.py  staging.py
src/dagster_project/resources/: __init__.py
src/matching/: __init__.py
src/models/: __init__.py  base.py  program.py  requirement.py  selection_criteria.py  specialty.py  training_site.py  university.py
src/reporting/: __init__.py
src/utils/: __init__.py  config.py  database.py
tests/: __init__.py  conftest.py  test_api.py  test_api_endpoints.py  test_etl.py  test_models.py
